Fix Dockerfile context and copy paths

--- a/training_scripts/tsconfig.json
+++ b/training_scripts/tsconfig.json
@@ -5,8 +5,13 @@
     "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "resolveJsonModule": true
   },
-  "include": ["src/**/*.ts", "./*.ts"],
-  "exclude": []
+  "include": [
+    "**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
