--- a/training_scripts/package.json
+++ b/training_scripts/package.json
@@ -10,25 +10,24 @@
     "start-self-play": "tsc && node dist/self_play_trainer.js",
     "predict": "tsc && node dist/predict.js",
     "pretrain": "tsc && node dist/pretrain_from_knowledge.js",
-    "build": "tsc",
+    "build": "./node_modules/typescript/bin/tsc --outDir dist --rootDir . --resolveJsonModule true --module commonjs --esModuleInterop true --target es2020 *.ts src/*.ts",
+    "build:cpu": "replace-in-file \"./server.ts\" \"@tensorflow/tfjs-node-gpu\" \"@tensorflow/tfjs-node\" && npm run build && replace-in-file \"./server.ts\" \"@tensorflow/tfjs-node\" \"@tensorflow/tfjs-node-gpu\"",
     "evaluate": "tsc && node dist/evaluate_models.js",
     "start:pipeline": "tsc && node dist/start_pipeline.js",
-    "start:final": "docker run --gpus all --rm -v %CD%\\replay_buffer:/app/replay_buffer -v %CD%\\training_checkpoints:/app/training_checkpoints -v %CD%\\model_main:/app/model_main -v %CD%\\replay_buffer_archive:/app/replay_buffer_archive -v %CD%\\training_checkpoints_archive:/app/training_checkpoints_archive gomoku-trainer",
-    "upload:model": "tsc && node dist/upload_model.js",
-    "deploy:gcp": "gcloud compute scp --recurse ./model_main/* gomoku-inference-server:~/Fun/training_scripts/model_main"
+    "start:final": "docker run --gpus all --rm -v $(pwd)/replay_buffer:/app/replay_buffer -v $(pwd)/training_checkpoints:/app/training_checkpoints -v $(pwd)/model_main:/app/model_main -v $(pwd)/replay_buffer_archive:/app/replay_buffer_archive -v $(pwd)/training_checkpoints_archive:/app/training_checkpoints_archive gomoku-trainer",
+    "upload:model": "tsc && node dist/upload_model.js"
   },
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
     "@supabase/supabase-js": "^2.57.0",
     "@tensorflow/tfjs-node-gpu": "4.19.0",
+    "@tensorflow/tfjs-node": "^4.19.0",
     "dotenv": "^17.2.2",
     "fastify": "^4.28.1",
-    "chokidar": "^3.6.0"
+    "replace-in-file": "^7.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.19.13",
     "typescript": "^5.9.2"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  }
 }
