--- a/package.json
+++ b/package.json
@@ -1,11 +1,29 @@
 {
+  "scripts": {
+    "build": "tsc",
+    "start:pipeline": "node dist/start_pipeline.js",
+    "start:status": "node dist/status_server.js",
+    "start": "npm run build && node dist/start_pipeline.js",
+    "start:one": "npm ci && npm run build && node scripts/run_or_docker.js",
+    "docker": "docker compose up -d --build",
+    "docker:gpu": "docker compose -f docker-compose.yml -f docker-compose.gpu.yml up -d --build",
+    "docker:gpu:quick": "docker compose -f docker-compose.yml -f docker-compose.gpu.yml -f docker-compose.quick.yml up -d --build",
+    "check:tf": "node scripts/check_tf_backend.js"
+  },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.12"
+    "@types/fs-extra": "^11.0.4",
+    "@types/node": "^20.14.10",
+    "typescript": "^5.5.3"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.56.0",
+    "@fastify/cors": "^9.0.1",
+    "@supabase/supabase-js": "^2.57.0",
+    "@tensorflow/tfjs": "4.19.0",
+    "@tensorflow/tfjs-node": "^4.22.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "fastify": "^4.28.1",
+    "fs-extra": "^11.2.0",
     "i18next": "^25.4.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
@@ -14,5 +32,8 @@
     "react-i18next": "^15.7.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
+  },
+  "optionalDependencies": {
+    "@tensorflow/tfjs-node-gpu": "4.19.0"
   }
 }
